# auto-transcribe

./: .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  lint.yml  release-please.yml  tests.yml
docs/: labels.md
scripts/: AutoTranscribe.command  Transcribe.command
src/auto_transcribe/: __init__.py  __main__.py  cli.py  config.py  logging.py  pipeline.py  queue.py  ui_tk.py  watcher.py
src/auto_transcribe/engines/: __init__.py  base.py  factory.py  mlx_whisper.py  parakeet.py
tests/: conftest.py  test_cli.py  test_config.py  test_e2e.py  test_factory.py  test_logging.py  test_pipeline.py  test_watcher.py
tests/integration/: conftest.py  test_cli_integration.py  test_pipeline_integration.py  test_watcher_queue_integration.py
