[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-transcribe"
version = "0.1.0"
description = "Local audio/video transcription for Apple Silicon (MLX Whisper + Parakeet)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Keigo Shimada" }]
dependencies = [
    "loguru>=0.7.2",
    "mlx-whisper>=0.4.0",
]

[project.optional-dependencies]
parakeet = ["parakeet-mlx>=0.3.0"]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.3",
    "pytest-cov>=5",
    "pytest-xdist>=3.5",
    "pytest-randomly>=3.15",
    "pytest-rerunfailures>=14",
    "coverage[toml]>=7.4",
    "ruff>=0.6",
    "mypy>=1.10",
    "vulture>=2.11",
    "deptry>=0.20",
    "pre-commit>=3.7",
]

[project.scripts]
auto-transcribe = "auto_transcribe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -ra summarises rerun/skip/xfail; -n auto runs in parallel via pytest-xdist;
# pytest-randomly randomises test order each run; --durations=10 surfaces the
# slowest tests; coverage threshold is enforced through pytest-cov.
addopts = """
  -ra
  -n auto
  --durations=10
  --cov=auto_transcribe
  --cov-report=term-missing
  --cov-report=xml:coverage.xml
  --cov-report=html:tests/_reports/htmlcov
  --cov-fail-under=80
  --junitxml=tests/_reports/junit.xml
  -p no:cacheprovider
"""
markers = [
    "e2e: end-to-end tests (slow; opt-in via RUN_E2E=1)",
    "integration: integration tests exercising multiple modules together",
    "flaky: tests with known transient failures; auto-retried via pytest-rerunfailures",
]
filterwarnings = [
    "error::DeprecationWarning:auto_transcribe.*",
]

[tool.coverage.run]
source = ["auto_transcribe"]
branch = true
parallel = true
# ui_tk requires a Tk display server; the two ML engines need a 1.6 GB model
# download to execute. Both are exercised by the opt-in e2e suite, not unit
# tests. Excluding them keeps the coverage gate meaningful instead of bloated
# with permanent zeros.
omit = [
    "*/auto_transcribe/__main__.py",
    "*/auto_transcribe/ui_tk.py",
    "*/auto_transcribe/engines/mlx_whisper.py",
    "*/auto_transcribe/engines/parakeet.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# Ruff: lint + format + complexity + large-file + TODO-format gate
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "tests/_reports",
    "tests/_e2e_artifacts",
    "ExampleData",
    "input",
    "output",
]

[tool.ruff.lint]
# Enable a curated, high-signal subset:
#   E/W   -- pycodestyle errors & warnings
#   F     -- pyflakes (unused imports/vars; dead-code at the symbol level)
#   I     -- isort (import order)
#   B     -- flake8-bugbear
#   UP    -- pyupgrade
#   SIM   -- flake8-simplify
#   C90   -- mccabe complexity
#   PL    -- pylint (refactor / convention / warning subsets)
#   PERF  -- flake8-performance
#   RUF   -- ruff-specific rules
#   FIX   -- flake8-fixme: makes bare TODO/FIXME visible
#   TD    -- flake8-todos: enforce TODO format
select = [
    "E", "W", "F", "I", "B", "UP", "SIM",
    "C90", "PL", "PERF", "RUF", "FIX", "TD",
]
ignore = [
    # Allow assert statements in tests
    "S101",
    # Allow magic numbers (transcription thresholds, frame rates, etc.)
    "PLR2004",
    # Allow long messages in raise statements
    "TRY003",
    # Don't require an issue link inside every TODO; we require the format only.
    "TD003",
    # We intentionally use broad `except Exception` in worker threads to keep
    # the queue alive; bugbear B904/BLE001 would fight that intent.
    "BLE001",
    # Some Tk/UI methods have many params; not worth refactoring around.
    "PLR0913",
    # We deliberately use lazy imports inside functions for optional ML
    # backends (mlx-whisper / parakeet-mlx) and to avoid pulling Tk into
    # headless code paths.
    "PLC0415",
    # Worker-thread loops legitimately need try/except inside the loop so a
    # transient error on one job doesn't take down the queue.
    "PERF203",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR0915",  # tests can be long
    "PLR0912",  # tests can have many branches
    "C901",     # tests can be complex
    "PT011",    # tests can use broad pytest.raises
]
"src/auto_transcribe/ui_tk.py" = [
    "PLR0915",  # Tk UI builders are naturally long
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
# Large-file / large-function detection lives here (PLR0915 max-statements,
# max-lines is repo-level via the `--select PLR0915` rule above).
max-statements = 60
max-args = 7
max-branches = 15
max-returns = 6

[tool.ruff.lint.isort]
known-first-party = ["auto_transcribe"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy: strict static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/auto_transcribe"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = true
no_implicit_reexport = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
# These third-party libs ship without type stubs.
module = ["mlx_whisper", "mlx_whisper.*", "parakeet_mlx", "parakeet_mlx.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Vulture: dead-code detection (90% confidence floor; tweaked allowlist)
# ---------------------------------------------------------------------------
[tool.vulture]
paths = ["src/auto_transcribe"]
min_confidence = 80
sort_by_size = true
ignore_names = [
    # Public API / dunder methods picked up by reflection
    "__version__",
    # Tk callback names
    "_on_*",
    "_drain_events",
    # pytest fixtures and CLI argparse callbacks
    "patch_engine",
    "isolated_settings",
    "scripted_engine",
    "integration_fixtures",
    "fixtures_dir",
    "example_data_dir",
    "reports_dir",
]

# ---------------------------------------------------------------------------
# Deptry: detects unused, missing, and transitively-used dependencies
# ---------------------------------------------------------------------------
[tool.deptry]
extend_exclude = ["tests", "scripts", "docs"]
known_first_party = ["auto_transcribe"]

[tool.deptry.per_rule_ignores]
# DEP002: dependency declared but not imported. The packages below ship CLI
# entry points (or are pre-commit-hook executables) consumed by tooling, not
# Python imports — flagging them as "unused" would be a false positive.
DEP002 = [
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "pytest-xdist",
    "pytest-randomly",
    "pytest-rerunfailures",
    "coverage",
    "ruff",
    "mypy",
    "vulture",
    "deptry",
    "pre-commit",
]
